# flamingo-trees

./: README.md  pyproject.toml
.github/workflows/: build_and_test.yml
scripts/FLAMINGO/: index_soap.sh
src/flamingo_trees/: __init__.py  index_trees.py
src/flamingo_trees/construction/: __init__.py  depth_first_trees.py  index_trees.py
tests/: test_depth_first_trees.py  test_index_soap.py
tests/data/: copy_test_data.py  halo_properties_0000.hdf5  halo_properties_0001.hdf5  halo_properties_0002.hdf5  halo_properties_0003.hdf5  halo_properties_0004.hdf5  halo_properties_0005.hdf5  halo_properties_0006.hdf5  halo_properties_0007.hdf5  halo_properties_0008.hdf5
tests/data/HBT/000/: SubSnap_000.0.hdf5  SubSnap_000.1.hdf5  SubSnap_000.10.hdf5  SubSnap_000.11.hdf5  SubSnap_000.12.hdf5  SubSnap_000.13.hdf5  SubSnap_000.14.hdf5  SubSnap_000.15.hdf5  SubSnap_000.2.hdf5  SubSnap_000.3.hdf5  SubSnap_000.4.hdf5  SubSnap_000.5.hdf5  SubSnap_000.6.hdf5  SubSnap_000.7.hdf5  SubSnap_000.8.hdf5  SubSnap_000.9.hdf5
tests/data/HBT/001/: SubSnap_001.0.hdf5  SubSnap_001.1.hdf5  SubSnap_001.10.hdf5  SubSnap_001.11.hdf5  SubSnap_001.12.hdf5  SubSnap_001.13.hdf5  SubSnap_001.14.hdf5  SubSnap_001.15.hdf5  SubSnap_001.2.hdf5  SubSnap_001.3.hdf5  SubSnap_001.4.hdf5  SubSnap_001.5.hdf5  SubSnap_001.6.hdf5  SubSnap_001.7.hdf5  SubSnap_001.8.hdf5  SubSnap_001.9.hdf5
tests/data/HBT/002/: SubSnap_002.0.hdf5  SubSnap_002.1.hdf5  SubSnap_002.10.hdf5  SubSnap_002.11.hdf5  SubSnap_002.12.hdf5  SubSnap_002.13.hdf5  SubSnap_002.14.hdf5  SubSnap_002.15.hdf5  SubSnap_002.2.hdf5  SubSnap_002.3.hdf5  (+6 more)
(+96 files in other folders)
